mini_test/version0.0/source_validation.md
# 焊接知识图谱模拟数据来源核验说明

## 1. 输出文件

- `graph_seed.json`：多图层概念、机理关系、参数调整规则和 CrobotpOS 设备约束。
- `cases.json`：由 `train.xlsx` 逐行转换得到的 34 条真实案例。
- `test.xlsx`：仅作为后续待推荐需求和测试输入，本次不导入案例库。

建议导入顺序：先执行 `import_graph_json(graph_seed.json)`，再执行
`import_case_json(cases.json)`，因为案例中的条件和参数引用依赖图规则文件中的节点。

## 2. 案例数据核验

### 2.1 数据来源

`train.xlsx` 的“说明”页将其标记为“CRP 焊接参数训练集”，共 34 条样本；
`cases.json` 与“训练集”页第 3—36 行一一对应。

以下字段保持原值，不做插值、均值化或推算：

- 材料、保护气体、焊丝直径、板厚和焊缝形式；
- 焊接速度、电流和电压；
- 干伸长、焊枪前后角和左右角。

核心数值直接写入案例节点；当前最简 `CaseRecord` 未单列干伸长和角度，因此这三项原值
保存在 `retrieval_text` 中，并通过 `parameter:wire_extension` 保留参数类型连接。

### 2.2 规范化映射

| Excel 原值 | JSON 表达 |
|---|---|
| 碳钢 / 镀锌板 / 不锈钢 | `carbon_steel` / `galvanized_steel` / `stainless_steel` |
| 100%CO2 | `CO2_100` |
| 80%Ar+20%CO2 | `Ar80_CO2_20` |
| 98%Ar+2%CO2 | `Ar98_CO2_2` |
| 98%Ar+2%O2 | `Ar98_O2_2` |
| 平* / 立* / 船型 | `flat` / `vertical` / `boat` |
| 内角 / 外角 / 搭接 / 拼接 | `inside_corner` / `outside_corner` / `lap` / `butt` |
| 船型 | `position=boat` 且 `joint_type=tee_fillet` |

原始中文焊缝形式完整保留在 `retrieval_text`，避免规范化后无法回溯。

### 2.3 自动一致性结果

- Excel 训练样本数：34；生成案例数：34。
- 逐行比较材料、气体、焊丝直径、板厚、位置、接头、电流、电压和速度：0 项不一致。
- 案例 ID 无重复；案例引用的条件、参数和质量节点均存在。
- 数据范围：电流 50—155 A，电压 11.5—19.7 V，速度 6—14 mm/s。
- 材料分布：碳钢 16、镀锌板 10、不锈钢 8。

这些案例是用户提供训练集中的真实案例，不是从教材表格生成的中点案例。

## 3. 图谱规则的提出与文档核验

`graph_seed.json` 共包含 55 个节点和 42 条关系，其中：

- `AFFECTS` 28 条；
- `SUGGESTS_ADJUSTMENT` 11 条；
- `LIMITS` 3 条。

规则通过 `provenance_type` 区分来源强度：

- `direct_statement`：教材原文直接陈述，26 条；
- `table_derived`：在控制若干条件后由教材参数表对比得到，6 条；
- `mechanism_interpretation`：依据原文因果链拆出的中间机理，2 条；
- `difference_mapping`：把程序差异代码映射到同名参数，5 条。

### 3.1 直接核验的机理关系

| 候选知识 | 核验结论 | 来源定位 |
|---|---|---|
| 电流增加使熔深和余高增加，熔宽增加较少 | 纳入 | GMAW PDF 第153、290页 |
| 电压增加使弧长和笼罩范围增加，熔宽增加、余高降低、熔深趋浅 | 纳入 | GMAW PDF 第153、292页 |
| 速度增加使单位长度热输入降低，熔宽、熔深和余高降低 | 纳入 | GMAW PDF 第153、294页 |
| 速度过高使飞溅增加，并可能出现咬边 | 纳入 | GMAW PDF 第294页 |
| 焊丝伸出长度增加使电阻热和熔化速度增加，余高增加、熔深降低 | 纳入 | GMAW PDF 第155页 |
| 稳定短路过渡要求电流与电压合理匹配 | 纳入 | GMAW PDF 第133页 |
| 低电流区以短路过渡为主，超过临界电流后可形成射流过渡 | 纳入 | GMAW PDF 第259、371页 |
| CO2比例或焊丝直径增加会提高射流过渡临界电流 | 纳入 | GMAW PDF 第371页 |
| 稳定喷射过渡的实际电流宜高于临界电流30—50 A | 作为关系条件纳入 | GMAW PDF 第371—372页 |

### 3.2 由表 6-19 受限推导的调整规则

教材 PDF 第370—371页为“MAG焊短路过渡焊接碳钢的典型参数”。本图谱不把该表
当作真实施焊案例，只在相同材料、保护气体、位置、接头和焊丝等条件可对齐时，
提取低置信度的方向性规则：

| 差异 | 建议方向 | 对比依据 |
|---|---|---|
| 板厚 4.8→6.4 mm | 电流增加、速度降低 | 横焊、T形角接、1.1 mm焊丝对应行 |
| 横焊→立/仰焊 | 电流降低、速度降低 | 3.2 mm、T形角接、0.89 mm焊丝对应行 |
| 焊丝 0.89→1.1 mm | 电流增加 | 3.2 mm、横焊、T形角接对应行 |

这些关系均标记为 `table_derived`、附带适用条件，置信度为 0.76—0.82；
不得在条件不一致时作为确定性规律使用。

## 4. CrobotpOS 设备知识核验

| 设备知识 | 来源定位 | 入图方式 |
|---|---|---|
| 一元模式中电压由电流匹配，分别模式中电压独立设置 | 说明书 PDF 第13页 | `Equipment-LIMITS→arc_voltage` |
| 工艺文件可设置正常、起弧、收弧电流和电压 | 说明书 PDF 第27—28页 | 设备定义与参数能力 |
| `ArcOn` 可直接给定速度、电流和电压 | 说明书 PDF 第32页 | 速度设置能力 |
| 电流每次微调5 A，电压每次微调0.2 V，范围受曲线匹配约束 | 说明书 PDF 第39—40页 | 两条带步长的 `LIMITS` 关系 |

说明书中的 `ArcOn(1) VL=10 I=160 V=20` 仅为指令语法示例，没有给出材料、板厚、
气体和接头条件，因此未作为焊接工艺案例。

## 5. 未纳入或避免的内容

- 未将教材表 6-19 的参数区间转换为所谓“真实案例”。
- 未把 `test.xlsx` 的 173 条无标签需求写入案例库，防止训练案例与测试需求混用。
- 未根据常识补造材料牌号、焊丝牌号、极性、保护气流量或质量检测结果。
- `cases.json` 的 `results` 均为空，因为训练表没有提供焊缝质量测量或合格标签。
- 未把 CrobotpOS 机器人软件误写成具体焊机电源，也未虚构其额定电流电压范围。
- 未在 Neo4j 数据中保存 PDF 证据段，只保存可定位的 `source_refs`。

## 6. 导入前提

案例模型应允许可选字段 `source_refs: list[str]`；如代码采用严格的
`extra="forbid"`，应在 `CaseRecord` 中显式增加该字段。其余核心字段与此前项目契约一致。

推荐命令：

```bash
python scripts/init_graph.py
python scripts/import_graph.py welding_kg_seed/graph_seed.json
python scripts/import_cases.py welding_kg_seed/cases.json
```

导入器应先检查节点和关系白名单，再检查全部 `from`、`to`、`conditions`、`parameters`
和 `results` 引用，任一悬空引用应使当前文件事务回滚。
